--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.organization=reddyk01-key
+sonar.organization=reddyk01
 sonar.projectKey=reddyk01-key_twittertrend
 sonar.projectName=twittertrend
 sonar.language=java
