--- a/deployment.yaml
+++ b/deployment.yaml
@@ -7,17 +7,17 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app:  valaxy-rtp
+      app: valaxy-rtp
   template:
     metadata:
       labels:
-        app:  valaxy-rtp
+        app: valaxy-rtp
     spec:
       imagePullSecrets:
-      - name: jfrogcred 
+      - name: jfrogcred
       containers:
-      - name:  valaxy-rtp
-        image: valaxy05.jfrog.io/valaxy-docker/ttrend:2.1.4
+      - name: valaxy-rtp
+        image: reddy01.jfrog.io/reddy-docker/ttrend:2.1.4
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
