--- a/service.yaml
+++ b/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name:  valaxy-rtp-service
+  name:  velaxy-rtp-service
   namespace: valaxy
 spec:
   type: NodePort
   selector:
     app: valaxy-rtp
   ports:
-  - nodePort: 30082
+  - nodePort: 30092
     port: 8000
     targetPort: 8000
